Fix blog panel broken style.

--- a/themes/hugo-universal-theme/static/css/maritime-blog.css
+++ b/themes/hugo-universal-theme/static/css/maritime-blog.css
@@ -14,8 +14,10 @@
   flex-wrap: wrap;
 }
 
-#heading-breadcrumbs + .col-md-3 {
-  float: right;
+@media (min-width: 992px) {
+	#heading-breadcrumbs + .col-md-3 {
+  	float: right;
+	}
 }
 
 .testimonials .item .testimonial .name-picture {
